--- a/Home.html
+++ b/Home.html
@@ -20,8 +20,9 @@
     </head>
     <body>
         <div class="topnav"> 
-			<a href= "NAME.html">TOPIC</a> 
-			<a href= "NAME.html" style="float:right">About</a> 
+			<a href="NAME.html">TOPIC</a> 
+			<a href="NAME.html">Give/Recieve</a>
+			<a href="NAME.html" style="float:right">About</a> 
         </div>
         <footer>
             
