--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
 					<input id="password" name="password" placeholder="**********" type="password">
 					<br><br>
 					<input name="submit" type="submit" value=" Login ">
-						<span><?php echo $error; ?></span>
+						//<span><?php echo $error; ?></span>
 				</form>
 			<br>
 			<a href="NAME.html">Click Here to Register</a>
