--- a/Home.html
+++ b/Home.html
@@ -28,12 +28,12 @@
 			<a href="NAME.html">Give/Recieve</a>
 			<a href="NAME.html" style="float:right">Sign-in</a> 
 		</div>
-		<div id="login">
+		<div id="login" style="float:right">
 			<h2>Login Form</h2>
 				<form action="" method="post">
 					<label>UserName :</label>
 					<input id="name" name="username" placeholder="username" type="text">
-					<br>
+					<br><br>
 					<label>Password :</label>
 					<input id="password" name="password" placeholder="**********" type="password">
 					<br><br>
